# soundweave

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  Makefile  README.md  client  clientboost.cpp  clientboostold.cpp  combine  holepunch.cpp  holepunchrtp2.cpp  holepunchwaveform.cpp  output.raw  server  server.cpp  serverold.cpp  soundweave  udptest  udptest.cpp  windowstest.cpp  wintest.cpp
autobuild/: build_jeremy.sh  build_mac.sh  build_server.sh
src/: holepunchrtp2.cpp  holepunchrtp2.cpp.old  holepunchwaveform.cpp  send
src/AudioCapture/: AudioCapture.cpp  AudioCapture.h  AudioCaptureBase.cpp  AudioCaptureBase.h  AudioCaptureLinux.cpp  AudioCaptureLinux.h  AudioCaptureMac.cpp  AudioCaptureMac.h
src/AudioPlayback/: AudioWaveform.cpp  AudioWaveform.h  RawAudioWriter.cpp  RawAudioWriter.h  WavFileWriter.cpp  WavFileWriter.h
src/Networking/: ClientInfo.h  ClientManager.cpp  ClientManager.h  ClientModule.cpp  ClientModule.h  RTP.cpp  RTP.h  RTPHeader.h  holepunch.cpp  holepunch.h
tests/: client1.cpp  client2.cpp  server1.cpp  server2.cpp
tests/local/: CMakeLists.txt  CMakeListsOLD.txt  audio_io  audio_io.cpp  common.h  main.cpp  receive  receive.cpp  send  send.cpp
tests/local/AudioCapture/: AudioCapture.cpp  AudioCapture.h
updated/: temp.cpp  test
